--- a/conf/php.ini
+++ b/conf/php.ini
@@ -428,7 +428,7 @@ disable_classes =
 ; threat in any way, but it makes it possible to determine whether you use PHP
 ; on your server or not.
 ; http://php.net/expose-php
-expose_php = On
+expose_php = Off
 
 ;;;;;;;;;;;;;;;;;;;
 ; Resource Limits ;
@@ -511,7 +511,7 @@ memory_limit = 128M
 ; Development Value: E_ALL | E_STRICT
 ; Production Value: E_ALL & ~E_DEPRECATED
 ; http://php.net/error-reporting
-error_reporting = E_ALL & ~E_NOTICE
+error_reporting = E_ALL & ~E_DEPRECATED
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -666,7 +666,7 @@ html_errors = Off
 ; Development Value: "GPCS"
 ; Production Value: "GPCS";
 ; http://php.net/variables-order
-variables_order = "EGPCS"
+variables_order = "GPCS"
 
 ; This directive determines which super global data (G,P,C,E & S) should
 ; be registered into the super global array REQUEST. If so, it also determines
@@ -867,7 +867,7 @@ enable_dl = Off
 
 ; Whether to allow HTTP file uploads.
 ; http://php.net/file-uploads
-file_uploads = On
+file_uploads = Off
 
 ; Temporary directory for HTTP uploaded files (will use system default if not
 ; specified).
@@ -944,8 +944,8 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-extension=soap.so
-extension=apc.so
+;extension=soap.so
+;extension=apc.so
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
@@ -1257,8 +1257,7 @@ mysqli.max_persistent = -1
 ; http://php.net/mysqli.allow-persistent
 mysqli.allow_persistent = On
 
-; Maximum number of links.  -1 means no limit.
-; http://php.net/mysqli.max-links
+; Maximum number of links.  -1 means no limit. http://php.net/mysqli.max-links
 mysqli.max_links = -1
 
 ; If mysqlnd is used: Number of cache slots for the internal result set cache
@@ -1495,7 +1494,7 @@ session.use_only_cookies = 1
 
 ; Name of the session (used as cookie name).
 ; http://php.net/session.name
-session.name = PHPSESSID
+session.name = SESSION
 
 ; Initialize session on request startup.
 ; http://php.net/session.auto-start
