--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -56,6 +56,7 @@ ListenBackLog 1024
 # LoadModule foo_module modules/mod_foo.so
 LoadModule php5_module        modules/libphp5.so
 #
+LoadModule unixd_module modules/mod_unixd.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
