--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -56,9 +56,7 @@ ListenBackLog 1024
 # LoadModule foo_module modules/mod_foo.so
 LoadModule php5_module        modules/libphp5.so
 #
-LoadModule unixd_module modules/mod_unixd.so
-LoadModule access_compat_module modules/mod_access_compat.so
-LoadModule filter_module modules/mod_filter.so
+LoadModule env_module modules/mod_env.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
