--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -59,7 +59,7 @@ LoadModule php5_module        modules/libphp5.so
 LoadModule env_module modules/mod_env.so
 LoadModule unixd_module modules/mod_unixd.so
 LoadModule access_compat_module modules/mod_access_compat.so
-LoadModule filter modules/mod_filter.so
+LoadModule filter_module modules/mod_filter.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
