--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -60,6 +60,7 @@ LoadModule env_module modules/mod_env.so
 LoadModule unixd_module modules/mod_unixd.so
 LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule filter_module modules/mod_filter.so
+LoadModule rewrite_module modules/mod_rewrite.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
