--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -61,6 +61,7 @@ LoadModule unixd_module modules/mod_unixd.so
 LoadModule access_compat_module modules/mod_access_compat.so
 LoadModule filter_module modules/mod_filter.so
 LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule authz_core_module modules/mod_authz_core.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
