--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -49,7 +49,7 @@ ServerRoot "/app/apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 0.0.0.0:80
+Listen ${PORT}
 
 #
 # Dynamic Shared Object (DSO) Support
