--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -136,7 +136,7 @@ LoadModule unixd_module modules/mod_unixd.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
 LoadModule dir_module modules/mod_dir.so
 #LoadModule speling_module modules/mod_speling.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 LoadModule php5_module        modules/libphp5.so
 
 <IfModule unixd_module>
