--- a/conf/php.ini
+++ b/conf/php.ini
@@ -945,6 +945,7 @@ default_socket_timeout = 60
 ; Be sure to appropriately set the extension_dir directive.
 ;
 extension=mongo.so
+extension=mcrypt.so
 ;extension=soap.so
 ;extension=apc.so
 ;extension=php_bz2.dll
@@ -975,8 +976,8 @@ extension=mongo.so
 ;extension=php_pspell.dll
 ;extension=php_shmop.dll
 
-; The MIBS data available in the PHP distribution must be installed. 
-; See http://www.php.net/manual/en/snmp.installation.php 
+; The MIBS data available in the PHP distribution must be installed.
+; See http://www.php.net/manual/en/snmp.installation.php
 ;extension=php_snmp.dll
 
 ;extension=php_soap.dll
@@ -1598,7 +1599,7 @@ session.entropy_length = 0
 ; Specified here to create the session id.
 ; http://php.net/session.entropy-file
 ; On systems that don't have /dev/urandom /dev/arandom can be used
-; On windows, setting the entropy_length setting will activate the 
+; On windows, setting the entropy_length setting will activate the
 ; Windows random source (using the CryptoAPI)
 ;session.entropy_file = /dev/urandom
 
