removed ssl conf, added external conf

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -204,10 +204,6 @@ ServerAdmin you@example.com
 # symbolic links and aliases may be used to point to other locations.
 #
 DocumentRoot "/app/www"
-SSLEngine on
-SSLCertificateKeyFile /app/www/.ssl/key.key
-SSLCertificateFile /app/www/.ssl/key.crt
-SSLCACertificateFile /app/www/.ssl/key.ca-bundle
 <Directory "/app/www">
     #
     # Possible values for the Options directive are "None", "All",
@@ -499,3 +495,4 @@ SSLRandomSeed connect builtin
 #<IfModule headers_module>
 #RequestHeader unset DNT env=bad_DNT
 #</IfModule>
+Include /app/www/.apache/config.conf
