Revert "added ssl conf"
This reverts commit f58d3ff842484fbe26f462b5630e7ba113e48ab5.

Conflicts:
	conf/httpd.conf

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -204,6 +204,7 @@ ServerAdmin you@example.com
 # symbolic links and aliases may be used to point to other locations.
 #
 DocumentRoot "/app/www"
+SSLEngine on
 <Directory "/app/www">
     #
     # Possible values for the Options directive are "None", "All",
@@ -217,6 +218,10 @@ DocumentRoot "/app/www"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
+
+    SSLCertificateKeyFile /app/www/.ssl/key.key
+    SSLCertificateFile /app/www/.ssl/key.crt
+    SSLCACertificateFile /app/www/.ssl/key.ca-bundle
 
     Options Indexes FollowSymLinks
 
@@ -495,4 +500,3 @@ SSLRandomSeed connect builtin
 #<IfModule headers_module>
 #RequestHeader unset DNT env=bad_DNT
 #</IfModule>
-Include /app/www/.apache/config.conf
