Revert "added ssl conf"
This reverts commit d334e5f9fe1e27a36eb66655163bcc731f8788f9.

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -124,7 +124,7 @@ LoadModule version_module modules/mod_version.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
 #LoadModule session_dbd_module modules/mod_session_dbd.so
 #LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
-LoadModule ssl_module modules/mod_ssl.so
+#LoadModule ssl_module modules/mod_ssl.so
 #LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
@@ -217,12 +217,6 @@ DocumentRoot "/app/www"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-
-    SSLEngine on
-    SSLCertificateKeyFile /app/www/.ssl/key.key
-    SSLCertificateFile /app/www/.ssl/key.crt
-    SSLCACertificateFile /app/www/.ssl/key.ca-bundle
-
     Options Indexes FollowSymLinks
 
     #
@@ -231,6 +225,7 @@ DocumentRoot "/app/www"
     #   AllowOverride FileInfo AuthConfig Limit
     #
     AllowOverride All
+
     #
     # Controls who can get stuff from this server.
     #
