--- a/conf/php.ini
+++ b/conf/php.ini
@@ -944,8 +944,8 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-extension=mongo.so
-extension=mcrypt.so
+extension=/app/php/lib/php/extensions/no-debug-non-zts-20121212/mongo.so
+extension=/app/php/lib/php/extensions/no-debug-non-zts-20121212/mcrypt.so
 ;extension=soap.so
 ;extension=apc.so
 ;extension=php_bz2.dll
